# ComfyUI-KokoroTTS

./: KokoroTTS.py  Languages.json  README.md  __init__.py  ailab_audio.py  pyproject.toml  requirements.txt  update.md
.github/workflows/: publish.yml
